commit - cropped svg style control and fixed some dimensional

--- a/scroll-snap-template.css
+++ b/scroll-snap-template.css
@@ -14,7 +14,8 @@
   overflow: hidden;
 }
 header {
-  position: fixed;
+  position: sticky;
+  top: 0;
   width: 100%;
   padding: 4px;
   /* width: calc(100% - 15px); */
@@ -35,6 +36,7 @@ header div {
 }
 .container {
   position: relative;
+  top: -20px;
   width: 100%;
   height: 100vh;
   scroll-snap-type: y mandatory;
@@ -45,7 +47,7 @@ header div {
   width: 100%;
   height: 100vh;
   display: flex;
-  gap: 6px;
+  gap: 3px;
   /* padding-top: 0rem; */
   /* padding; 10vh; */
   justify-content: center;
@@ -68,21 +70,25 @@ header div {
   color: white;
   background: black;
   /* border: 1px dashed red; */
-  border-radius: 6px;
-  border: 0.5px solid black;
-  box-shadow: 10px 10px 20px black;
+  border-bottom: 2px solid white;
+  border-radius: 6px 6px 0 0;
+  /* box-shadow: 10px 10px 20px black; */
 }
 .item .bgImg {
   position: relative;
   height: calc(52.6vw * 0.81);
   /* height is calculated from x-y dimension of original image source. */
   width: calc(100vw * 0.8);
-  border-radius: 6px;
+  border-radius: 0 0 6px 6px;
   overflow-x: hidden;
   overflow-y: hidden;
-  border: 1px solid black;
+  border: 1px solid lightgrey;
+  
+}
+
+.blackShadow {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8), 0px 0px 30px rgba(0, 0, 0, 0.6),
-    0px 0px 60px rgba(0, 0, 0, 0.4), 0px 0px 80px rgba(0, 0, 0, 0.2);
+  0px 0px 60px rgba(0, 0, 0, 0.4), 0px 0px 80px rgba(0, 0, 0, 0.2);
 }
 .item .bgImg img {
   height: 100%;
@@ -95,7 +101,7 @@ header div {
     overflow-x: scroll;
   }
 }
-@media (max-height: 400px) {
+@media (max-height: 450px) {
   .item .bgImg {
     height: 60vh;
     overflow-x: hidden;
@@ -111,14 +117,21 @@ header div {
   position: absolute;
   bottom: calc(-100vh * var(--i) + 5vh);
   right: 2vh;
-  /* border: 1px dashed red; */
   transition: 0.5s;
+  /* border: 1px dashed green; */
 }
 .footer-btn a {
   font-size: 0.6rem;
+  /* border: 1px dashed blue;  */
 }
 .footer-btn a i {
   font-size: 0.6rem;
+}
+.footer-btn a img {
+  position: relative;
+  top: 0.3rem;
+  width: 1rem;
+  /* border: 1px dashed red; */
 }
 .footer-btn:hover {
   letter-spacing: 1px;
